[gd_scene load_steps=2 format=3 uid="uid://beeroster"]

[ext_resource type="Script" path="res://scripts/ui/BeeRoster.gd" id="1_g1x06"]

[node name="BeeRoster" type="Control"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -190.0
offset_right = 210.0
offset_bottom = 190.0
pivot_offset = Vector2(0, 0)
visible = false
script = ExtResource("1_g1x06")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="Margin" type="MarginContainer" parent="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0

[node name="VBox" type="VBoxContainer" parent="Panel/Margin"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="Panel/Margin/VBox"]
text = "Bee Roster"
horizontal_alignment = 1

[node name="Instructions" type="Label" parent="Panel/Margin/VBox"]
text = "Tab to toggle • ↑/↓ select • Space choose/assign • Z cancel/unassign"
custom_minimum_size = Vector2(0, 24)
vertical_alignment = 1
horizontal_alignment = 1

[node name="BeeList" type="ItemList" parent="Panel/Margin/VBox"]
custom_minimum_size = Vector2(0, 170)
size_flags_vertical = 3
select_mode = 1
allow_rmb_select = false

[node name="SpecLabel" type="Label" parent="Panel/Margin/VBox"]
text = "Specialisation: —"
vertical_alignment = 1
horizontal_alignment = 1
custom_minimum_size = Vector2(0, 24)

[node name="Status" type="Label" parent="Panel/Margin/VBox"]
text = ""
vertical_alignment = 1
horizontal_alignment = 1
custom_minimum_size = Vector2(0, 20)
